2019-1/221/users/4102/executions/1687_1100.log
== TEST (2019-04-25 09:58:11) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
c = int(input("valor da cedula: "))
print("Entrada:", " ", c)
if (c == (("2") or ("5") or ("10") or ("20") or ("50") or ("100"))):
	if (c == "2"):
		print("Animal: Tartaruga")
	elif (c == "5"):
		print("Animal: Garca")
	elif (c == "10"):
		print("Animal: Arara")
	elif (c == "20"):
		print("Animal: Mico-leao-dourado")
	elif (c == "50"):
		print("Animal: Onca-pintada")
	else:
		print("Animal: Garoupa")
else:
	print("Animal: invalido")

-- OUTPUT:
Entrada:   100
Animal: invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 09:59:09) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
c = int(input("valor da cedula: "))
print("Entrada:", " ", c)
if (c == ((2) or (5) or (10) or (20) or (50) or (100))):
	if (c == 2):
		print("Animal: Tartaruga")
	elif (c == 5):
		print("Animal: Garca")
	elif (c == 10):
		print("Animal: Arara")
	elif (c == 20):
		print("Animal: Mico-leao-dourado")
	elif (c == 50):
		print("Animal: Onca-pintada")
	else:
		print("Animal: Garoupa")
else:
	print("Animal: invalido")

-- OUTPUT:
Entrada:   100
Animal: invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:00:43) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
c = int(input("valor da cedula: "))
print("Entrada:", " ", c)
if (c == ((2) or (5) or (10) or (20) or (50) or (100))):
	if (c == 2):
		print("Animal: Tartaruga")
	elif (c == 5):
		print("Animal: Garca")
	   elif (c == 10):
		   print("Animal: Arara")
	      elif (c == 20):
		      print("Animal: Mico-leao-dourado")
	         elif (c == 50):
		         print("Animal: Onca-pintada")
	         else:
		         print("Animal: Garoupa")
else:
	print("Animal: invalido")

-- ERROR:
File "XXXX", line 11
    elif (c == 10):
                  ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:01:04) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
c = int(input("valor da cedula: "))
print("Entrada:", " ", c)
if (c == ((2) or (5) or (10) or (20) or (50) or (100))):
	if (c == 2):
		print("Animal: Tartaruga")
	elif (c == 5):
		print("Animal: Garca")
	elif (c == 10):
		print("Animal: Arara")
	elif (c == 20):
		print("Animal: Mico-leao-dourado")
	elif (c == 50):
		print("Animal: Onca-pintada")
	else:
		print("Animal: Garoupa")
else:
	print("Animal: invalido")

-- OUTPUT:
Entrada:   100
Animal: invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:01:57) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
c = int(input("valor da cedula: "))
print("Entrada:", c)
if (c == ((2) and (5) and (10) and (20) and (50) and (100))):
	if (c == 2):
		print("Animal: Tartaruga")
	elif (c == 5):
		print("Animal: Garca")
	elif (c == 10):
		print("Animal: Arara")
	elif (c == 20):
		print("Animal: Mico-leao-dourado")
	elif (c == 50):
		print("Animal: Onca-pintada")
	else:
		print("Animal: Garoupa")
else:
	print("Animal: invalido")

-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 12:37:57) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
c = int(input("valor da cedula: "))
print("Entrada:", c)
if (c == ((2) or (5) or (10) or (20) or (50) or (100))):
	if (c == 2):
		print("Animal: Tartaruga")
	elif (c == 5):
		print("Animal: Garca")
	elif (c == 10):
		print("Animal: Arara")
	elif (c == 20):
		print("Animal: Mico-leao-dourado")
	elif (c == 50):
		print("Animal: Onca-pintada")
	else:
		print("Animal: Garoupa")
else:
	print("Animal: invalido")

-- OUTPUT:
Entrada: 100
Animal: invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 12:40:21) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
c = int(input("valor da cedula: "))
print("Entrada:", c)
if (c == 2) and (c == 5) and (c == 10) and (c == 20) and (c == 50) and (c == 100):
	if (c == 2):
		print("Animal: Tartaruga")
	elif (c == 5):
		print("Animal: Garca")
	elif (c == 10):
		print("Animal: Arara")
	elif (c == 20):
		print("Animal: Mico-leao-dourado")
	elif (c == 50):
		print("Animal: Onca-pintada")
	else:
		print("Animal: Garoupa")
else:
	print("Animal: invalido")

-- OUTPUT:
Entrada: 100
Animal: invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 12:41:04) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
c = int(input("valor da cedula: "))
print("Entrada:", c)
if (c == 2) and (c == 5) and (c == 10) and (c == 20) and (c == 50) and (c == 100):
	if (c == 2):
		print("Animal: Tartaruga")
	elif (c == 5):
		print("Animal: Garca")
	elif (c == 10):
		print("Animal: Arara")
	elif (c == "20"):
		print("Animal: Mico-leao-dourado")
	elif (c == 50):
		print("Animal: Onca-pintada")
	else:
		print("Animal: Garoupa")
else:
	print("Animal: invalido")

-- OUTPUT:
Entrada: 100
Animal: invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 13:01:58) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
c = int(input("valor da cedula: "))
print("Entrada:", c)
if (c == 2) or (c == 5) or (c == 10) or (c == 20) or (c == 50) or (c == 100):
	if (c == 2):
		print("Animal: Tartaruga")
	elif (c == 5):
		print("Animal: Garca")
	elif (c == 10):
		print("Animal: Arara")
	elif (c == 20):
		print("Animal: Mico-leao-dourado")
	elif (c == 50):
		print("Animal: Onca-pintada")
	else:
		print("Animal: Garoupa")
else:
	print("Animal: Invalido")

-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 13:02:07) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
c = int(input("valor da cedula: "))
print("Entrada:", c)
if (c == 2) or (c == 5) or (c == 10) or (c == 20) or (c == 50) or (c == 100):
	if (c == 2):
		print("Animal: Tartaruga")
	elif (c == 5):
		print("Animal: Garca")
	elif (c == 10):
		print("Animal: Arara")
	elif (c == 20):
		print("Animal: Mico-leao-dourado")
	elif (c == 50):
		print("Animal: Onca-pintada")
	else:
		print("Animal: Garoupa")
else:
	print("Animal: Invalido")

-- EXECUTION TIME:
0.170938
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
